Bar labels out of place bug fixed

--- a/src/libraries/chartist-js/chartist.css
+++ b/src/libraries/chartist-js/chartist.css
@@ -5,8 +5,8 @@
   line-height: 1; }
 
 .ct-bar-label {
-  color: white;
-  font-size: 0.9rem;
+  color: transparent;
+  font-size: 1rem;
 }
 
 .ct-chart-line .ct-label,
